--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "scripts.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "index.html"
   },
   "repository": {
     "type": "git",
